# BJJSim

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pymarkdown.json  .replit  BJJSim.code-workspace  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  replit.md
.github/workflows/: ci.yml
attached_assets/: Pasted-Run-pre-commit-run-all-files-show-diff-on-failure-INFO-Initializing-environment-for-https-g-1757595701713_1757595701713.txt  Pasted-Run-pre-commit-run-all-files-show-diff-on-failure-INFO-Initializing-environment-for-https-g-1757598081105_1757598081106.txt
docs/: README.md  conf.py  index.md  planning_review.md  requirements.txt
docs/api/: ui_endpoints.md
docs/architecture/: architecture.md  configuration.md  env_design.md  humanoid_model.md  observations_actions.md  physics_design.md  reward_design.md  self_play.md  ui_architecture.md
docs/planning/: agent_handoff_notes.md  lessons_learned.md  milestones.md  risks.md  roadmap.md
docs/planning/decisions/: ADR-0001-initial-architecture.md  ADR-0002-foundational-choices.md  ADR-0003-web-ui-and-testability.md  ADR-0004-ui-first-and-foundational-choices.md  ADR-0005-api-response-models.md  ADR-0006-physics-adapter-interface.md
docs/requirements/: assumptions.md  functional.md  glossary.md  nonfunctional.md  open_questions.md  overview.md  ui_testability.md
scripts/: docs-build.ps1  docs-serve.ps1  serve-quick.ps1  setup.ps1
src/bjjsim/: __init__.py
src/bjjsim/env/: __init__.py
src/bjjsim/physics/: __init__.py  adapter.py
src/bjjsim/web/: __init__.py  app.py
src/bjjsim/web/templates/: config.html  index.html
tests/: README.md  conftest.py  test_e2e_smoke.py  test_env.py  test_physics_adapter.py  test_web_app.py
