[project]
name = "bjjsim"
version = "0.0.4"
description = "Brazilian Jiu-Jitsu multi-agent self-play simulation (UI skeleton)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "BJJSim Contributors" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "jinja2>=3.1.4",
    "httpx>=0.27.0",
    "pytest>=7.0.0",
    "pillow>=10.3.0",
    "playwright>=1.46.0",
    "pytest-playwright>=0.5.0",
    "gymnasium>=0.29,<1",
    "numpy>=1.26,<3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

## Black removed in favor of Ruff formatter

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".venv", "venv", "dist", "build"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",   # pyflakes/pycodestyle/imports
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "ANN", # flake8-annotations
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
pretty = true
exclude = ["^venv/", "^.venv/", "^tests/"]
ignore_missing_imports = true

# Ensure tests are ignored even when mypy is invoked with explicit file paths (e.g., pre-commit --all-files)
[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

